server and render
